--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
 
     implementation 'com.facebook.fresco:fresco:0.10.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
