--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,15 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "me.lufeng.d1"
-        minSdkVersion 28
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
-            abiFilters "x86"
+//            abiFilters "x86"
             abiFilters "armeabi"
+            abiFilters "armeabi-v7a"
         }
     }
     buildTypes {
@@ -30,7 +31,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.taobao.android:weex_sdk:0.18.0@aar'
+    implementation 'com.taobao.android:weex_sdk:0.20.0.2@aar'
     implementation 'com.alibaba:fastjson:1.1.46.android'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
