--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         ndk {
 //            abiFilters "x86"
             abiFilters "armeabi"
-            abiFilters "armeabi-v7a"
+//            abiFilters "armeabi-v7a"
         }
     }
     buildTypes {
